--- a/Research_files/Research.css
+++ b/Research_files/Research.css
@@ -23,6 +23,14 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_1 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 24px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 29px;
+}
 .paragraph_style_1 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
@@ -45,7 +53,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
+.style_2 {
     padding: 35px;
 }
 .paragraph_style_2 {
@@ -70,7 +78,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_3 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -100,7 +108,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.style_4 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -108,7 +116,7 @@
     font-weight: 700;
     line-height: 21px;
 }
-.style_4 {
+.style_5 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -116,7 +124,7 @@
     font-weight: 400;
     line-height: 21px;
 }
-.style_5 {
+.style_6 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -141,12 +149,12 @@
     opacity: 1.00;
     padding-bottom: 8px;
     padding-top: 0px;
-    text-align: justify;
+    text-align: left;
     text-decoration: none;
     text-indent: -54px;
     text-transform: none;
 }
-.style_6 {
+.style_7 {
     font-family: 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -154,7 +162,10 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_7 {
+.style_External_699_1137 {
+    position: relative;
+}
+.style_8 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -162,7 +173,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_8 {
+.style_9 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -170,15 +181,67 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_9 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 15px;
+.paragraph_style_5 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
     font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 18px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
+}
+.paragraph_style_6 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: justify;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
 }
 .style_10 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 18px;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_1 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_11 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -186,7 +249,18 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_11 {
+.style_External_362_76 {
+    position: relative;
+}
+.style_12 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+}
+.style_13 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -194,7 +268,7 @@
     font-weight: 400;
     line-height: 21px;
 }
-.paragraph_style_5 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -216,15 +290,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_1 {
-    background: transparent;
-    opacity: 1.00;
-}
-.paragraph_style_6 {
+.paragraph_style_8 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -246,10 +312,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_362_76 {
-    position: relative;
-}
-.style_12 {
+.style_14 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -257,15 +320,7 @@
     font-weight: 700;
     line-height: 21px;
 }
-.style_13 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 20px;
-}
-.paragraph_style_7 {
+.paragraph_style_9 {
     color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
@@ -287,10 +342,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_External_699_1036 {
-    position: relative;
-}
-.style_14 {
+.style_15 {
     font-family: 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -298,7 +350,7 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_15 {
+.style_16 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -306,7 +358,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_16 {
+.style_17 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -314,7 +366,7 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_17 {
+.style_18 {
     font-family: 'Calibri';
     font-size: 8px;
     font-stretch: normal;
@@ -322,7 +374,7 @@
     font-weight: 400;
     line-height: 10px;
 }
-.style_18 {
+.style_19 {
     font-family: 'Calibri';
     font-size: 11px;
     font-stretch: normal;
@@ -330,7 +382,7 @@
     font-weight: 400;
     line-height: 13px;
 }
-.paragraph_style_8 {
+.paragraph_style_10 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 28px;
@@ -356,7 +408,7 @@
     background: transparent;
     opacity: 1.00;
 }
-.style_External_701_66 {
+.style_External_699_66 {
     position: relative;
 }
 .Free_Form {
@@ -406,13 +458,13 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_1036 {
+.Normal_External_699_66 {
+    position: relative;
+}
+.Normal_External_699_1137 {
     position: relative;
 }
 .Normal_External_362_76 {
-    position: relative;
-}
-.Normal_External_701_66 {
     position: relative;
 }
 .Title {
