--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -23,7 +23,64 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_1 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 24px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 29px;
+}
 .paragraph_style_1 {
+    color: rgb(17, 17, 17);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 22px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_2 {
+    color: rgb(66, 66, 66);
+    line-height: 22px;
+    opacity: 1.00;
+}
+.paragraph_style_2 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 13px;
+    margin-bottom: 0px;
+    margin-left: 54px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -36px;
+    text-transform: none;
+}
+.paragraph_style_3 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -45,15 +102,15 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri';
-    font-size: 18px;
+.style_3 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
     font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 19px;
 }
-.paragraph_style_2 {
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -75,23 +132,71 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_2 {
+.style_4 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: italic;
     font-weight: 400;
     line-height: 19px;
+    opacity: 1.00;
 }
-.style_3 {
+.style_5 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px;
+    opacity: 1.00;
+    vertical-align: 5px;
+}
+.style_6 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 700;
     line-height: 19px;
+    opacity: 1.00;
 }
-.style_4 {
+.style_7 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+    opacity: 1.00;
+    vertical-align: 5px;
+}
+.paragraph_style_5 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
+}
+.style_8 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -99,7 +204,15 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_5 {
+.style_9 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_10 {
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 16px;
     font-stretch: normal;
@@ -107,7 +220,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_6 {
+.style_11 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -115,10 +228,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_External_652_1527 {
-    position: relative;
-}
-.style_7 {
+.style_12 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -126,7 +236,11 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_8 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_13 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -134,7 +248,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_9 {
+.style_14 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -142,7 +256,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_10 {
+.style_15 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -150,7 +264,23 @@
     font-weight: 700;
     line-height: 19px;
 }
-.paragraph_style_3 {
+.style_16 {
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px;
+}
+.style_17 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 19px;
+}
+.paragraph_style_6 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -172,7 +302,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.paragraph_style_4 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -194,7 +324,10 @@
     text-indent: -36px;
     text-transform: none;
 }
-.paragraph_style_5 {
+.style_External_652_1513 {
+    position: relative;
+}
+.paragraph_style_8 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -216,11 +349,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_11 {
+.style_18 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -228,45 +357,7 @@
     font-weight: 700;
     line-height: 22px;
 }
-.style_12 {
-    font-family: 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
-}
-.paragraph_style_6 {
-    color: rgb(88, 77, 77);
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 19px;
-    margin-bottom: 0px;
-    margin-left: 72px;
-    margin-right: 36px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 8px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: -54px;
-    text-transform: none;
-}
-.style_13 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 19px;
-}
-.style_14 {
+.style_19 {
     color: rgb(45, 45, 45);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
@@ -280,7 +371,7 @@
     background: transparent;
     opacity: 1.00;
 }
-.paragraph_style_7 {
+.paragraph_style_9 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 28px;
@@ -309,7 +400,7 @@
 .style_External_362_67 {
     position: relative;
 }
-.paragraph_style_8 {
+.paragraph_style_10 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 12px;
@@ -331,7 +422,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_15 {
+.style_20 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
@@ -389,13 +480,13 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_652_1527 {
-    position: relative;
-}
 .Normal_External_699_66 {
     position: relative;
 }
 .Normal_External_362_67 {
+    position: relative;
+}
+.Normal_External_652_1513 {
     position: relative;
 }
 .Title {
@@ -432,11 +523,11 @@
     background: transparent;
     opacity: 1.00;
 }
-.graphic_shape_layout_style_default_External_604_45 {
-    position: relative;
-}
 .graphic_shape_layout_style_default {
     padding: 4px;
+}
+.graphic_shape_layout_style_default_External_604_45 {
+    position: relative;
 }
 a {
     color: rgb(88, 77, 77);
@@ -453,8 +544,7 @@ a.class1:visited {
     text-decoration: none;
 }
 a.class1:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
+    text-decoration: none;
 }
 a.class10 {
     text-decoration: none;
@@ -474,33 +564,6 @@ a.class11:visited {
 a.class11:hover {
     text-decoration: none;
 }
-a.class12 {
-    text-decoration: none;
-}
-a.class12:visited {
-    text-decoration: none;
-}
-a.class12:hover {
-    text-decoration: none;
-}
-a.class13 {
-    text-decoration: none;
-}
-a.class13:visited {
-    text-decoration: none;
-}
-a.class13:hover {
-    text-decoration: none;
-}
-a.class14 {
-    text-decoration: none;
-}
-a.class14:visited {
-    text-decoration: none;
-}
-a.class14:hover {
-    text-decoration: none;
-}
 a.class2 {
     text-decoration: none;
 }
@@ -508,8 +571,7 @@ a.class2:visited {
     text-decoration: none;
 }
 a.class2:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
+    text-decoration: none;
 }
 a.class3 {
     text-decoration: none;
@@ -518,8 +580,7 @@ a.class3:visited {
     text-decoration: none;
 }
 a.class3:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
+    text-decoration: none;
 }
 a.class4 {
     text-decoration: none;
