--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -174,6 +174,14 @@
     opacity: 1.00;
     vertical-align: 5px;
 }
+.style_8 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 19px;
+}
 .paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
@@ -196,7 +204,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_8 {
+.style_9 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -204,7 +212,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_9 {
+.style_10 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -212,7 +220,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_10 {
+.style_11 {
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 16px;
     font-stretch: normal;
@@ -220,7 +228,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_11 {
+.style_12 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -228,7 +236,11 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_12 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_13 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -236,24 +248,12 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_13 {
+.style_14 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 700;
-    line-height: 19px;
-}
-.style_14 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
     line-height: 19px;
 }
 .style_15 {
@@ -534,17 +534,19 @@ a {
     text-decoration: none;
 }
 a:visited {
-    color: rgb(121, 121, 121);
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 a.class1 {
+    color: rgb(88, 77, 77);
     text-decoration: none;
 }
 a.class1:visited {
-    text-decoration: none;
+    color: rgb(66, 66, 66);
 }
 a.class1:hover {
-    text-decoration: none;
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
 }
 a.class10 {
     text-decoration: none;
@@ -562,6 +564,15 @@ a.class11:visited {
     text-decoration: none;
 }
 a.class11:hover {
+    text-decoration: none;
+}
+a.class12 {
+    text-decoration: none;
+}
+a.class12:visited {
+    text-decoration: none;
+}
+a.class12:hover {
     text-decoration: none;
 }
 a.class2 {
@@ -653,7 +664,7 @@ a:hover {
     text-decoration: underline;
 }
 #widget0 a:visited {
-    color: rgb(121, 121, 121);
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 #widget0 a {
@@ -661,7 +672,7 @@ a:hover {
     text-decoration: none;
 }
 #widget1 a:visited {
-    color: rgb(121, 121, 121);
+    color: rgb(66, 66, 66);
     text-decoration: none;
 }
 .spacer {
