--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -190,6 +190,14 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_5 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 21px;
+}
 .paragraph_style_7 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
@@ -234,7 +242,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_5 {
+.style_6 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -374,7 +382,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_6 {
+.style_7 {
     font-family: 'Calibri';
     font-size: 12px;
     font-stretch: normal;
