--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -412,6 +412,14 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_8 {
+    font-family: 'Cambria-Italic', 'Cambria';
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 19px;
+}
 .paragraph_style_16 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
