--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -414,11 +414,11 @@
 }
 .style_8 {
     font-family: 'Cambria-Italic', 'Cambria';
-    font-size: 14px;
+    font-size: 10px;
     font-stretch: normal;
     font-style: italic;
     font-weight: 400;
-    line-height: 19px;
+    line-height: 14px;
 }
 .paragraph_style_16 {
     color: rgb(88, 77, 77);
@@ -463,6 +463,14 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
+}
+.style_9 {
+    font-family: 'Cambria-Italic', 'Cambria';
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 18px;
 }
 .style_External_303_266 {
     position: relative;
