--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -250,6 +250,22 @@
     font-weight: 700;
     line-height: 21px;
 }
+.style_7 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 15px;
+}
+.style_8 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 15px;
+}
 .paragraph_style_9 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
@@ -382,7 +398,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_7 {
+.style_9 {
     font-family: 'Calibri';
     font-size: 12px;
     font-stretch: normal;
@@ -411,14 +427,6 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
-}
-.style_8 {
-    font-family: 'Cambria-Italic', 'Cambria';
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 14px;
 }
 .paragraph_style_16 {
     color: rgb(88, 77, 77);
@@ -463,14 +471,6 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
-}
-.style_9 {
-    font-family: 'Cambria-Italic', 'Cambria';
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 18px;
 }
 .style_External_303_266 {
     position: relative;
