--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -155,6 +155,27 @@
 }
 .style_6 {
     color: rgb(66, 66, 66);
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 19px;
+    opacity: 1.00;
+}
+.style_7 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 19px;
+    opacity: 1.00;
+    vertical-align: 5px;
+}
+.style_8 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -163,18 +184,7 @@
     line-height: 19px;
     opacity: 1.00;
 }
-.style_7 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 11px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 19px;
-    opacity: 1.00;
-    vertical-align: 5px;
-}
-.style_8 {
+.style_9 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -182,7 +192,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_9 {
+.style_10 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -190,23 +200,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_10 {
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
-}
 .style_11 {
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
-}
-.style_12 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -214,12 +208,20 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_13 {
-    font-family: 'Calibri';
+.style_12 {
+    font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_13 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
     line-height: 19px;
 }
 .style_SkipStroke {
@@ -227,22 +229,6 @@
     opacity: 1.00;
 }
 .style_14 {
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 19px;
-}
-.style_15 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 19px;
-}
-.style_16 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -250,7 +236,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_17 {
+.style_15 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -324,10 +310,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_652_1513 {
-    position: relative;
-}
-.style_18 {
+.style_16 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -357,7 +340,18 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_19 {
+.style_17 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+    opacity: 1.00;
+    vertical-align: 5px;
+}
+.style_18 {
     color: rgb(45, 45, 45);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
@@ -422,7 +416,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_20 {
+.style_19 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
@@ -431,6 +425,9 @@
     line-height: 17px;
 }
 .style_External_699_66 {
+    position: relative;
+}
+.style_External_652_1531 {
     position: relative;
 }
 .Free_Form {
@@ -483,10 +480,10 @@
 .Normal_External_699_66 {
     position: relative;
 }
-.Normal_External_362_67 {
+.Normal_External_652_1531 {
     position: relative;
 }
-.Normal_External_652_1513 {
+.Normal_External_362_67 {
     position: relative;
 }
 .Title {
