--- a/Lab_Members_files/Lab_Members.css
+++ b/Lab_Members_files/Lab_Members.css
@@ -55,6 +55,28 @@
 }
 .paragraph_style_2 {
     color: rgb(88, 77, 77);
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: italic;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_3 {
+    color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -75,7 +97,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -105,7 +127,7 @@
     font-weight: 700;
     line-height: 17px;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 24px;
@@ -127,6 +149,12 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_External_405_217 {
+    position: relative;
+}
+.style_External_590_402 {
+    position: relative;
+}
 .style_3 {
     font-family: 'Calibri';
     font-size: 18px;
@@ -134,9 +162,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-}
-.style_External_590_402 {
-    position: relative;
 }
 .style_4 {
     font-family: 'Calibri-Italic', 'Calibri';
@@ -146,11 +171,11 @@
     font-weight: 400;
     line-height: 26px;
 }
-.style_SkipStroke {
+.style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
-.style_SkipStroke_1 {
+.style_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
@@ -161,9 +186,6 @@
 .style_SkipStroke_3 {
     background: transparent;
     opacity: 1.00;
-}
-.style_External_405_165 {
-    position: relative;
 }
 .style_External_699_66 {
     position: relative;
@@ -246,7 +268,7 @@
 .Normal_External_362_52 {
     position: relative;
 }
-.Normal_External_405_165 {
+.Normal_External_405_217 {
     position: relative;
 }
 .Normal_External_590_402 {
