--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -180,19 +180,21 @@
     line-height: 19px;
 }
 .style_9 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 19px;
-}
-.style_10 {
-    font-family: 'Calibri-Bold', 'Calibri';
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
+    line-height: 19px;
+    opacity: 1.00;
+}
+.style_10 {
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
     line-height: 19px;
 }
 .style_11 {
@@ -204,6 +206,26 @@
     line-height: 19px;
 }
 .style_12 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_13 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_14 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -211,17 +233,13 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_13 {
+.style_15 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: italic;
     font-weight: 400;
     line-height: 19px;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
 }
 .paragraph_style_5 {
     color: rgb(88, 77, 77);
@@ -289,7 +307,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_14 {
+.style_16 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -319,7 +337,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_15 {
+.style_17 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 11px;
@@ -330,7 +348,7 @@
     opacity: 1.00;
     vertical-align: 5px;
 }
-.style_16 {
+.style_18 {
     color: rgb(45, 45, 45);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
@@ -369,7 +387,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_17 {
+.style_19 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
