--- a/Research_files/Research.css
+++ b/Research_files/Research.css
@@ -162,9 +162,6 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_External_699_1137 {
-    position: relative;
-}
 .style_8 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
@@ -203,6 +200,71 @@
     text-indent: -54px;
     text-transform: none;
 }
+.style_10 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    opacity: 1.00;
+}
+.style_11 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    opacity: 1.00;
+}
+.style_12 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+    opacity: 1.00;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_1 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_External_362_76 {
+    position: relative;
+}
+.style_13 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 18px;
+}
+.style_14 {
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+}
+.style_15 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 18px;
+}
 .paragraph_style_6 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
@@ -225,34 +287,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_10 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 18px;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_1 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_11 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 18px;
-}
-.style_External_362_76 {
-    position: relative;
-}
-.style_12 {
+.style_16 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -260,7 +295,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_13 {
+.style_17 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -312,7 +347,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_14 {
+.style_18 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -342,7 +377,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_15 {
+.style_19 {
     font-family: 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -350,7 +385,7 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_16 {
+.style_20 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -358,7 +393,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_17 {
+.style_21 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -366,7 +401,15 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_18 {
+.style_22 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_23 {
     font-family: 'Calibri';
     font-size: 8px;
     font-stretch: normal;
@@ -374,13 +417,16 @@
     font-weight: 400;
     line-height: 10px;
 }
-.style_19 {
+.style_24 {
     font-family: 'Calibri';
     font-size: 11px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
     line-height: 13px;
+}
+.style_External_699_1242 {
+    position: relative;
 }
 .style_External_699_66 {
     position: relative;
@@ -435,10 +481,10 @@
 .Normal_External_699_66 {
     position: relative;
 }
-.Normal_External_699_1137 {
+.Normal_External_362_76 {
     position: relative;
 }
-.Normal_External_362_76 {
+.Normal_External_699_1242 {
     position: relative;
 }
 .graphic_generic_body_textbox_style_default_SkipStroke {
@@ -476,6 +522,50 @@ a.class2:visited {
     text-decoration: none;
 }
 a.class2:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+a.class3 {
+    text-decoration: none;
+}
+a.class3:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+a.class3:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+a.class4 {
+    text-decoration: none;
+}
+a.class4:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+a.class4:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+a.class5 {
+    text-decoration: none;
+}
+a.class5:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+a.class5:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+a.class6 {
+    text-decoration: none;
+}
+a.class6:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+a.class6:hover {
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
