--- a/Lab_Members_files/Lab_Members.css
+++ b/Lab_Members_files/Lab_Members.css
@@ -53,7 +53,45 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_2 {
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+.style_3 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 26px;
+}
 .paragraph_style_2 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_3 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 18px;
@@ -75,7 +113,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 18px;
@@ -97,7 +135,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -119,7 +157,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_4 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
@@ -127,7 +165,7 @@
     font-weight: 700;
     line-height: 17px;
 }
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 24px;
@@ -152,27 +190,11 @@
 .style_External_405_217 {
     position: relative;
 }
-.style_3 {
-    font-family: 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 26px;
-}
-.style_4 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 26px;
-}
-.style_SkipStroke_1 {
+.style_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
-.style_SkipStroke {
+.style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
@@ -184,10 +206,10 @@
     background: transparent;
     opacity: 1.00;
 }
-.style_External_590_429 {
+.style_External_699_66 {
     position: relative;
 }
-.style_External_699_66 {
+.style_External_640_561 {
     position: relative;
 }
 .style_External_362_52 {
@@ -268,7 +290,7 @@
 .Normal_External_362_52 {
     position: relative;
 }
-.Normal_External_590_429 {
+.Normal_External_640_561 {
     position: relative;
 }
 .Normal_External_405_217 {
@@ -331,6 +353,7 @@ a.class1 {
 }
 a.class1:visited {
     color: rgb(66, 66, 66);
+    text-decoration: none;
 }
 a.class1:hover {
     color: rgb(0, 0, 0);
@@ -341,7 +364,6 @@ a.class2 {
 }
 a.class2:visited {
     color: rgb(66, 66, 66);
-    text-decoration: none;
 }
 a.class2:hover {
     color: rgb(0, 0, 0);
