--- a/Home_files/Home.css
+++ b/Home_files/Home.css
@@ -3,14 +3,14 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 24px;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 35px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -23,24 +23,19 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
+.style_External_699_70 {
+    position: relative;
 }
 .paragraph_style_1 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
-    font-size: 18px;
+    font-size: 22px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 26px;
+    line-height: 27px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -62,6 +57,31 @@
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_External_654_785 {
+    position: relative;
+}
+.paragraph_style_3 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
     line-height: 22px;
     margin-bottom: 0px;
     margin-left: 0px;
@@ -75,7 +95,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 18px;
@@ -97,10 +117,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_654_785 {
-    position: relative;
-}
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -122,7 +139,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_1 {
     font-family: 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -130,7 +147,7 @@
     font-weight: 400;
     line-height: 26px;
 }
-.style_3 {
+.style_2 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -146,7 +163,7 @@
     background: transparent;
     opacity: 1.00;
 }
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -168,7 +185,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_4 {
+.style_3 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
@@ -177,9 +194,6 @@
     line-height: 17px;
 }
 .style_External_362_52 {
-    position: relative;
-}
-.style_External_699_66 {
     position: relative;
 }
 .Body {
@@ -251,7 +265,7 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_66 {
+.Normal_External_699_70 {
     position: relative;
 }
 .Normal_External_654_785 {
