--- a/Contact_files/Contact.css
+++ b/Contact_files/Contact.css
@@ -3,14 +3,14 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 24px;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 35px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -23,24 +23,19 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
+.style_External_699_70 {
+    position: relative;
 }
 .paragraph_style_1 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
-    font-size: 18px;
+    font-size: 22px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 24px;
+    line-height: 27px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -48,56 +43,10 @@
     opacity: 1.00;
     padding-bottom: 0px;
     padding-top: 0px;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
-}
-.style_2 {
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-}
-.style_3 {
-    font-family: 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-}
-.style_4 {
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-}
-.style_5 {
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
-}
-.style_6 {
-    color: rgb(34, 34, 34);
-    font-family: 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    opacity: 1.00;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
 }
 .paragraph_style_2 {
     color: rgb(88, 77, 77);
@@ -121,7 +70,75 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_1 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+.style_2 {
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+.style_3 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+}
+.style_4 {
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+}
+.style_5 {
+    color: rgb(34, 34, 34);
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    opacity: 1.00;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
 .paragraph_style_3 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 24px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 18px;
@@ -154,7 +171,7 @@
 .style_External_357_76 {
     position: relative;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
@@ -179,9 +196,6 @@
 .style_SkipStroke_3 {
     background: transparent;
     opacity: 1.00;
-}
-.style_External_699_66 {
-    position: relative;
 }
 .Bold {
     font-family: 'Calibri-Bold', 'Calibri';
@@ -238,7 +252,7 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_66 {
+.Normal_External_699_70 {
     position: relative;
 }
 .Normal_External_357_76 {
@@ -278,11 +292,11 @@
     background: transparent;
     opacity: 1.00;
 }
-.graphic_textbox_layout_style_default_External_311_419 {
-    position: relative;
-}
 .graphic_textbox_layout_style_default {
     padding: 4px;
+}
+.graphic_textbox_layout_style_default_External_311_419 {
+    position: relative;
 }
 .graphic_textbox_style_default_SkipStroke {
     background: transparent;
@@ -297,23 +311,12 @@ a:visited {
     text-decoration: none;
 }
 a.class1 {
-    color: rgb(88, 77, 77);
     text-decoration: none;
 }
 a.class1:visited {
-    color: rgb(66, 66, 66);
+    text-decoration: none;
 }
 a.class1:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
-}
-a.class2 {
-    text-decoration: none;
-}
-a.class2:visited {
-    text-decoration: none;
-}
-a.class2:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
 }
