--- a/Outreach_files/Outreach.css
+++ b/Outreach_files/Outreach.css
@@ -3,14 +3,14 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 24px;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 35px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -23,15 +23,29 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
-}
 .paragraph_style_1 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 22px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 27px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_2 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -53,7 +67,7 @@
     text-indent: 36px;
     text-transform: none;
 }
-.paragraph_style_2 {
+.paragraph_style_3 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -75,7 +89,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(61, 166, 0);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 20px;
@@ -97,7 +111,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_1 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
     font-stretch: normal;
@@ -105,7 +119,7 @@
     font-weight: 700;
     line-height: 30px;
 }
-.style_3 {
+.style_2 {
     font-family: 'Calibri';
     font-size: 22px;
     font-stretch: normal;
@@ -113,7 +127,7 @@
     font-weight: 400;
     line-height: 30px;
 }
-.style_4 {
+.style_3 {
     font-family: 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -124,7 +138,7 @@
 .style_External_362_76 {
     position: relative;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
@@ -146,7 +160,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -168,7 +182,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -190,7 +204,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_5 {
+.style_4 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -198,7 +212,7 @@
     font-weight: 400;
     line-height: 21px;
 }
-.paragraph_style_7 {
+.paragraph_style_8 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
@@ -220,7 +234,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_8 {
+.paragraph_style_9 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -242,6 +256,14 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_5 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 25px;
+}
 .style_6 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
@@ -250,7 +272,7 @@
     font-weight: 700;
     line-height: 21px;
 }
-.paragraph_style_9 {
+.paragraph_style_10 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 22px;
@@ -272,7 +294,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_10 {
+.paragraph_style_11 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -294,7 +316,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_11 {
+.paragraph_style_12 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -316,7 +338,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_12 {
+.paragraph_style_13 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -338,7 +360,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_13 {
+.paragraph_style_14 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 22px;
@@ -360,7 +382,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_14 {
+.paragraph_style_15 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -390,7 +412,7 @@
     font-weight: 400;
     line-height: 17px;
 }
-.paragraph_style_15 {
+.paragraph_style_16 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -412,7 +434,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_16 {
+.paragraph_style_17 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -434,7 +456,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_17 {
+.paragraph_style_18 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -493,7 +515,7 @@
 .style_External_375_69 {
     position: relative;
 }
-.style_External_699_66 {
+.style_External_699_70 {
     position: relative;
 }
 .style_External_411_136 {
@@ -574,7 +596,7 @@
 .Normal_External_411_136 {
     position: relative;
 }
-.Normal_External_699_66 {
+.Normal_External_699_70 {
     position: relative;
 }
 .Normal_External_375_69 {
