--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -3,14 +3,14 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 24px;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 35px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -23,15 +23,32 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
+.style_External_699_70 {
+    position: relative;
 }
 .paragraph_style_1 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 22px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 27px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_2 {
     color: rgb(17, 17, 17);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
@@ -53,12 +70,12 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_1 {
     color: rgb(66, 66, 66);
     line-height: 22px;
     opacity: 1.00;
 }
-.paragraph_style_2 {
+.paragraph_style_3 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 11px;
@@ -80,7 +97,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
@@ -102,7 +119,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_3 {
+.style_2 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -110,7 +127,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -132,7 +149,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_4 {
+.style_3 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
@@ -142,7 +159,7 @@
     line-height: 19px;
     opacity: 1.00;
 }
-.style_5 {
+.style_4 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 11px;
@@ -153,7 +170,7 @@
     opacity: 1.00;
     vertical-align: 5px;
 }
-.style_6 {
+.style_5 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
@@ -163,7 +180,7 @@
     line-height: 19px;
     opacity: 1.00;
 }
-.style_7 {
+.style_6 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -171,7 +188,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_8 {
+.style_7 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -179,7 +196,7 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_9 {
+.style_8 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
@@ -189,7 +206,7 @@
     line-height: 19px;
     opacity: 1.00;
 }
-.style_10 {
+.style_9 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -197,7 +214,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_11 {
+.style_10 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -205,19 +222,11 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_12 {
+.style_11 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
-    font-weight: 700;
-    line-height: 19px;
-}
-.style_13 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
     font-weight: 700;
     line-height: 19px;
 }
@@ -225,7 +234,15 @@
     background: transparent;
     opacity: 1.00;
 }
-.style_14 {
+.style_12 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_13 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -233,7 +250,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_15 {
+.style_14 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -241,7 +258,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -263,7 +280,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -285,7 +302,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.paragraph_style_7 {
+.paragraph_style_8 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -307,7 +324,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_16 {
+.style_15 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -315,7 +332,7 @@
     font-weight: 700;
     line-height: 22px;
 }
-.paragraph_style_8 {
+.paragraph_style_9 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -337,7 +354,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_17 {
+.style_16 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 11px;
@@ -348,7 +365,7 @@
     opacity: 1.00;
     vertical-align: 5px;
 }
-.style_18 {
+.style_17 {
     color: rgb(45, 45, 45);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
@@ -365,7 +382,7 @@
 .style_External_362_67 {
     position: relative;
 }
-.paragraph_style_9 {
+.paragraph_style_10 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 12px;
@@ -387,16 +404,13 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_19 {
+.style_18 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 700;
     line-height: 17px;
-}
-.style_External_699_66 {
-    position: relative;
 }
 .style_External_652_1531 {
     position: relative;
@@ -448,13 +462,13 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_66 {
-    position: relative;
-}
 .Normal_External_652_1531 {
     position: relative;
 }
 .Normal_External_362_67 {
+    position: relative;
+}
+.Normal_External_699_70 {
     position: relative;
 }
 .graphic_generic_body_textbox_style_default_SkipStroke {
@@ -474,15 +488,13 @@ a:visited {
     text-decoration: none;
 }
 a.class1 {
-    color: rgb(88, 77, 77);
     text-decoration: none;
 }
 a.class1:visited {
-    color: rgb(66, 66, 66);
+    text-decoration: none;
 }
 a.class1:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
+    text-decoration: none;
 }
 a.class10 {
     text-decoration: none;
@@ -500,15 +512,6 @@ a.class11:visited {
     text-decoration: none;
 }
 a.class11:hover {
-    text-decoration: none;
-}
-a.class12 {
-    text-decoration: none;
-}
-a.class12:visited {
-    text-decoration: none;
-}
-a.class12:hover {
     text-decoration: none;
 }
 a.class2 {
