--- a/Research_files/Research.css
+++ b/Research_files/Research.css
@@ -3,14 +3,14 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 24px;
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 35px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -23,15 +23,32 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
+.style_External_699_70 {
+    position: relative;
 }
 .paragraph_style_1 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 22px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 27px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_2 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 12px;
@@ -53,10 +70,10 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_2 {
+.style_1 {
     padding: 35px;
 }
-.paragraph_style_2 {
+.paragraph_style_3 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -78,7 +95,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.style_2 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -86,7 +103,7 @@
     font-weight: 700;
     line-height: 24px;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -108,7 +125,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_4 {
+.style_3 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -116,67 +133,21 @@
     font-weight: 700;
     line-height: 21px;
 }
+.style_4 {
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+}
 .style_5 {
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
-}
-.style_6 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: italic;
     font-weight: 400;
     line-height: 21px;
-}
-.paragraph_style_4 {
-    color: rgb(88, 77, 77);
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 19px;
-    margin-bottom: 0px;
-    margin-left: 72px;
-    margin-right: 36px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 8px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: -54px;
-    text-transform: none;
-}
-.style_7 {
-    font-family: 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-}
-.style_8 {
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 18px;
-}
-.style_9 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 18px;
 }
 .paragraph_style_5 {
     color: rgb(88, 77, 77);
@@ -200,6 +171,62 @@
     text-indent: -54px;
     text-transform: none;
 }
+.style_6 {
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+}
+.style_7 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+}
+.style_8 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 18px;
+}
+.paragraph_style_6 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
+}
+.style_9 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    opacity: 1.00;
+}
 .style_10 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
@@ -207,26 +234,6 @@
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
-    line-height: 18px;
-    opacity: 1.00;
-}
-.style_11 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    opacity: 1.00;
-}
-.style_12 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 15px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
     line-height: 18px;
     opacity: 1.00;
 }
@@ -238,10 +245,20 @@
     background: transparent;
     opacity: 1.00;
 }
+.style_11 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+    opacity: 1.00;
+}
 .style_External_362_76 {
     position: relative;
 }
-.style_13 {
+.style_12 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -249,7 +266,7 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_14 {
+.style_13 {
     font-family: 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -257,7 +274,7 @@
     font-weight: 400;
     line-height: 18px;
 }
-.style_15 {
+.style_14 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -265,7 +282,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -287,7 +304,7 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_16 {
+.style_15 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -295,7 +312,7 @@
     font-weight: 700;
     line-height: 18px;
 }
-.style_17 {
+.style_16 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -303,7 +320,7 @@
     font-weight: 400;
     line-height: 21px;
 }
-.paragraph_style_7 {
+.paragraph_style_8 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -325,7 +342,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_8 {
+.paragraph_style_9 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -347,7 +364,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_18 {
+.style_17 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -355,7 +372,15 @@
     font-weight: 700;
     line-height: 21px;
 }
-.paragraph_style_9 {
+.style_18 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 20px;
+}
+.paragraph_style_10 {
     color: rgb(88, 77, 77);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 15px;
@@ -409,6 +434,9 @@
     font-weight: 700;
     line-height: 19px;
 }
+.style_External_699_1242 {
+    position: relative;
+}
 .style_23 {
     font-family: 'Calibri';
     font-size: 8px;
@@ -424,12 +452,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 13px;
-}
-.style_External_699_1242 {
-    position: relative;
-}
-.style_External_699_66 {
-    position: relative;
 }
 .Free_Form {
     color: rgb(88, 77, 77);
@@ -478,10 +500,10 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_66 {
+.Normal_External_362_76 {
     position: relative;
 }
-.Normal_External_362_76 {
+.Normal_External_699_70 {
     position: relative;
 }
 .Normal_External_699_1242 {
