--- a/Teaching_files/Teaching.css
+++ b/Teaching_files/Teaching.css
@@ -3,14 +3,39 @@
 }
 .paragraph_style {
     color: rgb(66, 66, 66);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 28px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 35px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_External_699_70 {
+    position: relative;
+}
+.paragraph_style_1 {
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
-    font-size: 24px;
+    font-size: 22px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 29px;
+    line-height: 27px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -24,17 +49,9 @@
     text-transform: none;
 }
 .style_1 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 24px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 29px;
-}
-.style_2 {
     padding: 0px;
 }
-.paragraph_style_1 {
+.paragraph_style_2 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 20px;
@@ -56,7 +73,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.style_2 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -64,7 +81,7 @@
     font-weight: 700;
     line-height: 29px;
 }
-.style_4 {
+.style_3 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -72,7 +89,7 @@
     font-weight: 400;
     line-height: 29px;
 }
-.paragraph_style_2 {
+.paragraph_style_3 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 14px;
@@ -94,7 +111,7 @@
     text-indent: -18px;
     text-transform: none;
 }
-.style_5 {
+.style_4 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -102,7 +119,7 @@
     font-weight: 400;
     line-height: 23px;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 14px;
@@ -124,7 +141,7 @@
     text-indent: -18px;
     text-transform: none;
 }
-.style_6 {
+.style_5 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -132,7 +149,7 @@
     font-weight: 700;
     line-height: 29px;
 }
-.style_7 {
+.style_6 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -140,7 +157,7 @@
     font-weight: 400;
     line-height: 29px;
 }
-.paragraph_style_4 {
+.paragraph_style_5 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 3px;
@@ -162,7 +179,7 @@
     text-indent: -18px;
     text-transform: none;
 }
-.style_8 {
+.style_7 {
     font-family: 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -170,7 +187,10 @@
     font-weight: 400;
     line-height: 22px;
 }
-.style_9 {
+.style_External_651_813 {
+    position: relative;
+}
+.style_8 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
     font-stretch: normal;
@@ -178,10 +198,7 @@
     font-weight: 700;
     line-height: 22px;
 }
-.style_External_651_813 {
-    position: relative;
-}
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 14px;
@@ -203,7 +220,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_10 {
+.style_9 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -211,7 +228,11 @@
     font-weight: 700;
     line-height: 29px;
 }
-.style_11 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_10 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -219,11 +240,7 @@
     font-weight: 700;
     line-height: 23px;
 }
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 14px;
@@ -245,7 +262,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_12 {
+.style_11 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -253,11 +270,19 @@
     font-weight: 400;
     line-height: 23px;
 }
-.style_13 {
+.style_12 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: italic;
+    font-weight: 400;
+    line-height: 23px;
+}
+.style_13 {
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
     font-weight: 400;
     line-height: 23px;
 }
@@ -268,17 +293,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 23px;
-}
-.style_15 {
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 23px;
     text-decoration: underline;
 }
-.style_16 {
+.style_15 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -286,7 +303,7 @@
     font-weight: 700;
     line-height: 23px;
 }
-.style_17 {
+.style_16 {
     font-family: 'Calibri';
     font-size: 11px;
     font-stretch: normal;
@@ -295,7 +312,7 @@
     line-height: 23px;
     vertical-align: 5px;
 }
-.paragraph_style_7 {
+.paragraph_style_8 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 15px;
@@ -317,7 +334,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_8 {
+.paragraph_style_9 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 15px;
@@ -339,7 +356,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_18 {
+.style_17 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 15px;
@@ -349,7 +366,7 @@
     line-height: 22px;
     opacity: 1.00;
 }
-.paragraph_style_9 {
+.paragraph_style_10 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 14px;
@@ -371,7 +388,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_19 {
+.style_18 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 20px;
     font-stretch: normal;
@@ -386,7 +403,7 @@
 .style_External_357_76 {
     position: relative;
 }
-.paragraph_style_10 {
+.paragraph_style_11 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
@@ -407,9 +424,6 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
-}
-.style_External_699_66 {
-    position: relative;
 }
 .Free_Form {
     color: rgb(88, 77, 77);
@@ -458,10 +472,10 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_699_66 {
+.Normal_External_357_76 {
     position: relative;
 }
-.Normal_External_357_76 {
+.Normal_External_699_70 {
     position: relative;
 }
 .Normal_External_651_813 {
@@ -482,16 +496,6 @@ a {
 a:visited {
     color: rgb(66, 66, 66);
     text-decoration: none;
-}
-a.class1 {
-    text-decoration: none;
-}
-a.class1:visited {
-    color: rgb(66, 66, 66);
-}
-a.class1:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
 }
 a:hover {
     color: rgb(0, 0, 0);
