--- a/Home_files/Home.css
+++ b/Home_files/Home.css
@@ -70,9 +70,6 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_654_785 {
-    position: relative;
-}
 .paragraph_style_3 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
@@ -159,11 +156,36 @@
     background: transparent;
     opacity: 1.00;
 }
+.style_External_654_766 {
+    position: relative;
+}
+.paragraph_style_6 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 20px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 29px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
 .style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -268,7 +290,7 @@
 .Normal_External_699_70 {
     position: relative;
 }
-.Normal_External_654_785 {
+.Normal_External_654_766 {
     position: relative;
 }
 .Normal_External_362_52 {
