--- a/Home_files/Home.css
+++ b/Home_files/Home.css
@@ -131,7 +131,7 @@
     opacity: 1.00;
     padding-bottom: 0px;
     padding-top: 0px;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
@@ -143,6 +143,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+}
+.style_External_654_389 {
+    position: relative;
 }
 .style_2 {
     font-family: 'Calibri-Italic', 'Calibri';
@@ -156,11 +159,33 @@
     background: transparent;
     opacity: 1.00;
 }
+.paragraph_style_6 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
 .style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
-.paragraph_style_6 {
+.paragraph_style_7 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -189,9 +214,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: 17px;
-}
-.style_External_654_680 {
-    position: relative;
 }
 .style_External_362_52 {
     position: relative;
@@ -268,7 +290,7 @@
 .Normal_External_699_70 {
     position: relative;
 }
-.Normal_External_654_680 {
+.Normal_External_654_389 {
     position: relative;
 }
 .Normal_External_362_52 {
@@ -289,17 +311,6 @@ a {
 a:visited {
     color: rgb(66, 66, 66);
     text-decoration: none;
-}
-a.class1 {
-    text-decoration: none;
-}
-a.class1:visited {
-    color: rgb(66, 66, 66);
-    text-decoration: none;
-}
-a.class1:hover {
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
 }
 a:hover {
     color: rgb(0, 0, 0);
