--- a/Lab_Members_files/Lab_Members.css
+++ b/Lab_Members_files/Lab_Members.css
@@ -70,30 +70,14 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_1 {
+.paragraph_style_3 {
+    color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 18px;
     font-stretch: normal;
     font-style: normal;
-    font-weight: 400;
-    line-height: 26px;
-}
-.style_2 {
-    font-family: 'Calibri-Italic', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 26px;
-}
-.paragraph_style_3 {
-    color: rgb(88, 77, 77);
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
     font-variant: normal;
-    font-weight: 700;
+    font-weight: 400;
     letter-spacing: 0;
     line-height: 26px;
     margin-bottom: 0px;
@@ -109,28 +93,6 @@
     text-transform: none;
 }
 .paragraph_style_4 {
-    color: rgb(88, 77, 77);
-    font-family: 'Calibri';
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 26px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_5 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 12px;
@@ -152,7 +114,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.style_1 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
@@ -160,7 +122,7 @@
     font-weight: 700;
     line-height: 17px;
 }
-.paragraph_style_6 {
+.paragraph_style_5 {
     color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 24px;
@@ -182,14 +144,74 @@
     text-indent: 0px;
     text-transform: none;
 }
+.paragraph_style_6 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
 .style_External_405_217 {
     position: relative;
 }
-.style_SkipStroke {
+.style_2 {
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+.style_3 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 26px;
+}
+.paragraph_style_7 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 18px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 26px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
-.style_SkipStroke_1 {
+.style_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
@@ -201,7 +223,10 @@
     background: transparent;
     opacity: 1.00;
 }
-.style_External_640_459 {
+.style_External_640_33 {
+    position: relative;
+}
+.style_External_405_191 {
     position: relative;
 }
 .style_External_362_52 {
@@ -276,16 +301,19 @@
 .Normal {
     padding: 4px;
 }
+.Normal_External_405_191 {
+    position: relative;
+}
 .Normal_External_362_52 {
     position: relative;
 }
 .Normal_External_699_70 {
     position: relative;
 }
-.Normal_External_640_459 {
+.Normal_External_405_217 {
     position: relative;
 }
-.Normal_External_405_217 {
+.Normal_External_640_33 {
     position: relative;
 }
 .Title {
@@ -345,7 +373,6 @@ a.class1 {
 }
 a.class1:visited {
     color: rgb(66, 66, 66);
-    text-decoration: none;
 }
 a.class1:hover {
     color: rgb(0, 0, 0);
@@ -356,6 +383,7 @@ a.class2 {
 }
 a.class2:visited {
     color: rgb(66, 66, 66);
+    text-decoration: none;
 }
 a.class2:hover {
     color: rgb(0, 0, 0);
@@ -366,7 +394,6 @@ a.class3 {
 }
 a.class3:visited {
     color: rgb(66, 66, 66);
-    text-decoration: none;
 }
 a.class3:hover {
     color: rgb(0, 0, 0);
