--- a/Publications_files/Publications.css
+++ b/Publications_files/Publications.css
@@ -49,7 +49,7 @@
     text-transform: none;
 }
 .paragraph_style_2 {
-    color: rgb(17, 17, 17);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -71,9 +71,27 @@
     text-transform: none;
 }
 .style_1 {
-    color: rgb(66, 66, 66);
+    color: rgb(88, 77, 77);
     line-height: 22px;
     opacity: 1.00;
+}
+.style_2 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    opacity: 1.00;
+}
+.style_3 {
+    font-family: 'Calibri-Italic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 22px;
 }
 .paragraph_style_3 {
     color: rgb(66, 66, 66);
@@ -119,7 +137,7 @@
     text-indent: -36px;
     text-transform: none;
 }
-.style_2 {
+.style_4 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -128,7 +146,7 @@
     line-height: 19px;
 }
 .paragraph_style_5 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -149,44 +167,22 @@
     text-indent: -54px;
     text-transform: none;
 }
-.style_3 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri-Italic', 'Calibri';
+.style_5 {
+    font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
-    font-style: italic;
+    font-style: normal;
     font-weight: 400;
     line-height: 19px;
-    opacity: 1.00;
 }
-.style_4 {
-    color: rgb(66, 66, 66);
+.style_6 {
     font-family: 'Calibri';
     font-size: 11px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
     line-height: 19px;
-    opacity: 1.00;
     vertical-align: 5px;
-}
-.style_5 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 19px;
-    opacity: 1.00;
-}
-.style_6 {
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
 }
 .style_7 {
     font-family: 'Calibri-Bold', 'Calibri';
@@ -205,16 +201,6 @@
     line-height: 19px;
 }
 .style_9 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
-    opacity: 1.00;
-}
-.style_10 {
     font-family: 'Calibri-BoldItalic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -222,11 +208,19 @@
     font-weight: 700;
     line-height: 19px;
 }
-.style_11 {
+.style_10 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
     font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+}
+.style_11 {
+    font-family: 'Calibri-BoldItalic', 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: italic;
     font-weight: 700;
     line-height: 19px;
 }
@@ -235,14 +229,6 @@
     opacity: 1.00;
 }
 .style_12 {
-    font-family: 'Calibri-BoldItalic', 'Calibri';
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: italic;
-    font-weight: 700;
-    line-height: 19px;
-}
-.style_13 {
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -250,7 +236,7 @@
     font-weight: 400;
     line-height: 19px;
 }
-.style_14 {
+.style_13 {
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -259,7 +245,7 @@
     line-height: 19px;
 }
 .paragraph_style_6 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -281,7 +267,7 @@
     text-transform: none;
 }
 .paragraph_style_7 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -303,7 +289,7 @@
     text-transform: none;
 }
 .paragraph_style_8 {
-    color: rgb(88, 77, 77);
+    color: rgb(66, 66, 66);
     font-family: 'Calibri';
     font-size: 16px;
     font-stretch: normal;
@@ -324,7 +310,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_15 {
+.style_14 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 18px;
     font-stretch: normal;
@@ -333,6 +319,59 @@
     line-height: 22px;
 }
 .paragraph_style_9 {
+    color: rgb(66, 66, 66);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
+}
+.style_15 {
+    font-family: 'Calibri-Bold', 'Calibri';
+    font-size: 11px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 19px;
+    vertical-align: 5px;
+}
+.paragraph_style_10 {
+    color: rgb(88, 77, 77);
+    font-family: 'Calibri';
+    font-size: 16px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 0px;
+    margin-left: 72px;
+    margin-right: 36px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 8px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -54px;
+    text-transform: none;
+}
+.paragraph_style_11 {
     color: rgb(88, 77, 77);
     font-family: 'Calibri';
     font-size: 16px;
@@ -355,17 +394,6 @@
     text-transform: none;
 }
 .style_16 {
-    color: rgb(66, 66, 66);
-    font-family: 'Calibri-Bold', 'Calibri';
-    font-size: 11px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 19px;
-    opacity: 1.00;
-    vertical-align: 5px;
-}
-.style_17 {
     color: rgb(45, 45, 45);
     font-family: 'Calibri-Italic', 'Calibri';
     font-size: 11px;
@@ -379,13 +407,13 @@
     background: transparent;
     opacity: 1.00;
 }
-.style_External_362_67 {
-    position: relative;
-}
 .style_External_652_1550 {
     position: relative;
 }
-.paragraph_style_10 {
+.style_External_362_67 {
+    position: relative;
+}
+.paragraph_style_12 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 12px;
@@ -407,7 +435,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_18 {
+.style_17 {
     font-family: 'Calibri-Bold', 'Calibri';
     font-size: 14px;
     font-stretch: normal;
